add abandoned property to composer and point to new(fold) module

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "bluehost/endurance-wp-module-sso",
   "description": "Bluehost Single Sign-on Integration",
+  "abandoned": "newfold-labs/wp-module-sso",
   "type": "library",
   "license": "GPL-2.0-or-later",
   "authors": [
